Update index structure, remove front-matter from sass file and update gitignore to not include assets directory

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Ian Johnson</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="/assets/main.css">
   </head>
   <body>
     <h1 class="title">Ian Johnson</h1>
