Add page for shotty and update styling

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </p>
                 <div class="columns sourceList">
                   <div class="column source">
-                    <i class="fas fa-link"></i>&nbsp;<a href="#">Link</a>
+                    <i class="fas fa-link"></i>&nbsp;<a href="/projects/shotty.html">Link</a>
                   </div>
                   <div class="column source">
                     <i class="fas fa-book"></i>&nbsp;<a href="#">Repository</a>
